# babel

./: CMakeLists.txt  README.md  conanfile.txt  run.sh
Config/: Config.hpp
Exception/: Error.cpp  Error.hpp
GUI/: NewApp.pro  NewApp_fr_FR.ts  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  secdialog.cpp  secdialog.hpp  secdialog.ui
Protocol/: Protocol.hpp
Utils/: Utils.hpp
client/include/: Inetwork.hpp  client.hpp  network.hpp
client/src/: main.cpp  network.cpp
client/src/Audio/: IAudio.hpp  PA.cpp  PA.hpp
client/src/Codec/: EncodedPacket.hpp  ICodec.hpp  Opus.cpp  Opus.hpp
server/include/: Client.hpp  Inetwork.hpp  database.hpp  network.hpp  protocolManager.hpp
server/src/: database.cpp  main.cpp  network.cpp
server/src/Exchange/: Exchange.hpp
